[package]
name = "oc_back"
version = "0.1.0-devel"
edition = "2018"
authors = ["Peter Jin"]

[profile.dev]
#opt-level = 0
opt-level = 1
debug = true
overflow-checks = true
panic = "abort"
#codegen-units = 1
#incremental = false
codegen-units = 256
incremental = true
lto = false

[build-dependencies]
deflate = { path = "../deflate" }
jest = { path = "../jest" }
time = { path = "../time-0.1" }

[dependencies]
aho_corasick = { path = "../aho_corasick", default-features = false, features = ["std"] }
constant_time_eq = { path = "../constant_time_eq" }
deflate = { path = "../deflate" }
fdeflate = { path = "../fdeflate" }
#flate = { path = "../flate" }
#minify_js = { path = "../minify_js" }
oc_engine = { path = "../oc_engine" }
once_cell = { path = "../once_cell" }
rng = { path = "../rng" }
rustc_serialize = { path = "../rustc_serialize" }
service_base = { path = "../service_base" }
time = { path = "../time-0.1" }

[[bin]]
name = "oc_back_service"
path = "tools/oc_back_service.rs"

[[bin]]
name = "gen_token"
path = "tools/gen_token.rs"
